--- a/backend/pkg/templates/login_verification.html
+++ b/backend/pkg/templates/login_verification.html
@@ -32,10 +32,10 @@
           
           <div class="content">
             <p>Hello,</p>
-            <p>Thank you for signing up! To complete your registration, please verify your email address (<strong>{{userEmail}}</strong>).</p>
+            <p>Thank you for signing up! To complete your registration, please verify your email address (<strong>{{.UserEmail}}</strong>).</p>
             
             <p>Your Email Verification code is:</p>
-            <div class="otp-code">{{OTP}}</div>
+            <div class="otp-code">{{.OTP}}</div>
             
             <p>This code will expire in <strong>5 minutes</strong>.</p>
         
