--- a/backend/pkg/templates/reset_password.html
+++ b/backend/pkg/templates/reset_password.html
@@ -32,15 +32,15 @@
           
           <div class="content">
             <p>Hello,</p>
-            <p>We received a request to reset the password for your account associated with <strong>{{userEmail}}</strong>.</p>
+            <p>We received a request to reset the password for your account associated with <strong>{{.UserEmail}}</strong>.</p>
             
             <p>Your password reset code is:</p>
-            <div class="otp-code">{{OTP}}</div>
+            <div class="otp-code">{{.OTP}}</div>
             
             <p>This code will expire in <strong>5 minutes</strong>.</p>
             
             <p>If you didn't request this password reset, please ignore this email. Your password will remain unchanged.</p>
-            
+            <br>
             <p class="warning">For security reasons, never share this code with anyone.</p>
           </div>
           
